--- a/Home.wiki
+++ b/Home.wiki
@@ -2,9 +2,9 @@
 
 * On [[compileandrun|how to compile and run dplasma]]
 * On [[understanding|understanding the compilation and runtime process of DAGuE]]
- - On [[compilejdf|how to write a DAGuE enabled operation by using the DAGuE compiler]]
- - On [[writejdf|how to write a DAGuE enabled operation by editing the JDF file directly]]
- - On [[datadistribution|how to write a program that uses a DAGuE enabled operation]] (a.k.a. "what is this data distribution thing?")
+** On [[compilejdf|how to write a DAGuE enabled operation by using the DAGuE compiler]]
+** On [[writejdf|how to write a DAGuE enabled operation by editing the JDF file directly]]
+** On [[datadistribution|how to write a program that uses a DAGuE enabled operation]] (a.k.a. "what is this data distribution thing?")
 
  ---- 
 
