--- a/compileandrun.wiki
+++ b/compileandrun.wiki
@@ -198,14 +198,14 @@ The dplasma library is compiled into dplasma/library. All testing
 programs are compiled in dplasma/testing. Exemples are:
 * dplasma/testing/testing_?getrf -> LU Factorization (simple or double precision)
 * dplasma/testing/testing_?geqrf -> QR Factorization (simple or double precision)
-* dplasma/testing/testing_?potrf -> Cholesy Factorization (simple or double precision)
+* dplasma/testing/testing_?potrf -> Cholesky Factorization (simple or double precision)
 
 All the binaries should accept as input:
 * -c <n> the number of threads used for kernel execution on each node. This should be set to the number of cores. Remember that one additional thread will be spawned to handle the communications in the MPI version, but in normal run, this thread shares the most available core with another thread.
 * -N SIZE, a mandatory argument to define the size of the matrix
 * -g <number of GPUs> number of GPUs to use, if the operation is GPU-enabled
-* -t <blocksize> columns in a tile (if no -t is passed, the result of PLASMA_TUNE is used)
-* -T <blocksize> rows in a tile (if no -T is passed, the result of PLASMA_TUNE is used)
+* -t <blocksize> columns in a tile
+* -T <blocksize> rows in a tile, (WARNING: actually every algorithm included in DPLASMA requires square tiles)
 * -p <number of rows> to require a 2-D block cyclic distribution of p rows
 * -q <number of columns> to require a 2D block cyclic distribution of q columns 
 
@@ -214,6 +214,6 @@ A typical dplasma run using MPI looks like:
 mpirun -np 8 ./testing_spotrf -c 8 -g 0 -p 4 -q 2 -t 120 -T 120 -N 1000
 }}}
 
-Meaning that we'll run LU on 8 nodes, 8 computing threads per node, nodes being arranged in a 4x2 grid, with a distributed generation of the matrix of size 1000x1000 singles, with tiles of size 120x120.
+Meaning that we'll run Cholesky factorization on 8 nodes, 8 computing threads per node, nodes being arranged in a 4x2 grid, with a distributed generation of the matrix of size 1000x1000 singles, with tiles of size 120x120.
 
-Each test can dump the list of options with -h. Some tests have specific options (like -I to tune the inner block size in QR and LU, and -M in QR to have non-square matrices).
+Each test can dump the list of options with -h. Some tests have specific options (like -I to tune the inner block size in QR and LU, and -M in LU or QR to have non-square matrices).
